<resources>
    <string name="app_name">my tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tarefas">Tarefas</string>
    <string name="adicionar">Adicionar</string>
    <string name="importante">Importante</string>
    <string name="completado">completado</string>
    <string name="atualizar">Atualizar</string>
    <string name="atividade_1">Atividade 1</string>
</resources>